@@ -1,3 +1,9 @@
+2022-05-13  Jim Fowler  <jrf@biblion>
+
+	* Tools/python/aabooks/lib/entrylist.py (EntryList.__add__):
+	Created the __add__() and __iadd__() so that I can add or extend
+	the EntryList class
+
 2022-04-24  Jim Fowler  <jrf@biblion>
 
 	* Tools/python/aabooks/lib/search.py (__get_sub_strings__): Add
